blocks/card/card.css
.card {
  border-bottom-left-radius: 10px;
  border-bottom-right-radius: 10px;
  border-top-left-radius: 12px;
  border-top-right-radius: 12px;
  background-color: white;
  max-width: 282px;
  position: relative;
  display: flex;
  flex-direction: column;
}

